[project]
name = "pyozo"
authors = [{ name = "Kaloyan Tenchov" }]
description = "Pure-Python Ozobot communication library."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["bleak", "packaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/zayfod/pyozo"
Issues = "https://github.com/zayfod/pyozo/issues"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyozo"]

[tool.setuptools_scm]
version_file = "pyozo/version.py"

[tool.ruff]
line-length = 120

[tool.mypy]
install_types = true
non_interactive = true
python_version = "3.11"
exclude = ["venv", "build"]
files = ["."]
strict = true

[tool.pytest.ini_options]
testpaths = ["pyozo"]
